feat(test/batch): NewSolvedProblemService의 commitChunkTransaction 메소드와 NewSolvedProblemReader의 read()에서 새롭게 해결된 문제를 필터링하는 부분 작성